# CORM

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
include/corm/: BeanCreator.h  BeanManager.h  BeanProvider.h  CircularDependencyChecker.h  Configuration.h  ConfigurationMacro.h  Context.h
source/: BeanCreator.h  BeanManager.cpp  BeanManager.h  BeanProvider.h  CircularDependencyChecker.cpp  CircularDependencyChecker.h  Configuration.cpp  Configuration.h  ConfigurationAssembler.h  ConfigurationMacro.h  Context.cpp  Context.h  SimpleCorm.h
source/exception/: InvalidBeanException.cpp  InvalidBeanException.h
src/corm/: BeanManager.cpp  CircularDependencyChecker.cpp  Configuration.cpp  Context.cpp
test/: CMakeLists.txt
test/include/config/: ConfigurationTestConfigs.h  ContextTestBeanMismatchConfigs.h  ContextTestCircularDependencyConfig.h  ContextTestConfigs.h  ContextTestDependenctConfigs.h
test/include/performance/: NoConfig.h  RuntimeConfig.h  SimpleConfig.h
test/include/simple/: SimpleCormAdder.h  SimpleCormConfig1.h  SimpleCormConfig2.h  SimpleCormNsAdder.h
test/src/: BeanCreatorTest.cpp  BeanManagerTest.cpp  BeanProviderTest.cpp  ContextTest.cpp  PerformanceTest.cpp  SimpleCormTest.cpp
test_source/: BeanCreatorTest.cpp  BeanManagerTest.cpp  BeanProviderTest.cpp  ConfigurationAssemblerTest.cpp  ConfigurationManagerTest.cpp  ConfigurationTest.cpp  ContextTest.cpp  DummyClass.h  PerformanceTest.cpp  SimpleCormAdder.h  SimpleCormConfig1.h  SimpleCormConfig2.h  SimpleCormNsAdder.h  SimpleCormTest.cpp  testMain.cpp
test_source/config/: Config1.h  ConfigWithDeps.h  ConfigurationTestConfigs.h  ConsumerManagerTestConfig.h  ConsumerTestConfig.h  ContextTestBeanMismatchConfigs.h  ContextTestCircularDependencyConfig.h  ContextTestConfigs.h  ContextTestDependenctConfigs.h  DummyBeanTestConfig.h  (+6 more)
(+9 files in other folders)
